--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
+# BE WP url
 NEXT_PUBLIC_WORDPRESS=https://apollo.code-village.ro
+
+# FE public site url
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+
+WC_CONSUMER_KEY=ck_a113bd273912b4b1220b7ab6849acde92557eb14
+WC_CONSUMER_SECRET=cs_4f5373f50555c0edc5f0a2cb54279d8408c5893f
