--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "svg": "svgr -d components/icons/components components/icons/svg"
   },
   "dependencies": {
-    "axios": "^1.2.0",
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "axios": "1.1.3",
     "lodash": "^4.17.21",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@svgr/cli": "^6.5.1",
     "@types/lodash": "^4.14.191",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
